Bug 291798 - In mobile connection wizard APN field is not changing when selecting some plan
Summary: In mobile connection wizard APN field is not changing when selecting some plan
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Mobile Broadband (other bugs)
Version First Reported In: 0.9
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-17 18:11 UTC by Swami Dhyan Nataraj (Nikolay Shaplov)
Modified: 2012-01-17 19:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
mobile_wizard:_change_apn_when_users_selects_another_plan.diff (695 bytes, patch)
2012-01-17 18:11 UTC, Swami Dhyan Nataraj (Nikolay Shaplov)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Swami Dhyan Nataraj (Nikolay Shaplov) 2012-01-17 18:11:02 UTC
Created attachment 67935 [details]
mobile_wizard:_change_apn_when_users_selects_another_plan.diff

Version:           0.9
OS:                Linux

See summary

Reproducible: Always

Steps to Reproduce:
New Mobile Connection -> Russia -> Мегафон -> Select any palan, but APN will be shown for Default plan


Expected Results:  
APN is shown for selected plan

Patch is inclided
Comment 1 Lamarque V. Souza 2012-01-17 19:30:24 UTC
Git commit fc9fd1941b4779731a703e243d1aa2adb1a80a68 by Lamarque V. Souza.
Committed on 17/01/2012 at 20:28.
Pushed by lvsouza into branch 'master'.

Show APN string for the APN seleted by the user in Mobile Connection
Wizard.
Thanks Swami Dhyan Nataraj (Nikolay Shaplov) for this patch.

M  +3    -1    settings/config/mobileconnectionwizard.cpp

http://commits.kde.org/networkmanagement/fc9fd1941b4779731a703e243d1aa2adb1a80a68
Comment 2 Lamarque V. Souza 2012-01-17 19:31:58 UTC
Git commit 99d3dbe854029cd3df593e6398ff73921ce7ea15 by Lamarque V. Souza.
Committed on 17/01/2012 at 20:31.
Pushed by lvsouza into branch 'nm09'.

Show APN string for the APN seleted by the user in Mobile Connection
Wizard.
Thanks Swami Dhyan Nataraj (Nikolay Shaplov) for this patch.

M  +1    -1    plasma_nm_version.h
M  +3    -1    settings/config/mobileconnectionwizard.cpp

http://commits.kde.org/networkmanagement/99d3dbe854029cd3df593e6398ff73921ce7ea15