Show APN string for the APN seleted by the user in Mobile Connection Wizard. Thanks Swami Dhyan Nataraj (Nikolay Shaplov) for this patch.

BUG: 291798